--- a/css/_Hero.scss
+++ b/css/_Hero.scss
@@ -1,12 +1,7 @@
 #hero {
   background: #f7991c;
   color: white;
-  text-align: center;
   padding-top: 110px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  position: relative;
 
   &::before {
     content: "";
@@ -21,6 +16,29 @@
     background-size: 80%, 100%;
     background-position: 340px -325px, -163px -476px;
     opacity: 0.25;
+  }
+
+  &::after { // vertical line connecting to next section
+    background-color: white;
+  }
+
+  .design-star {
+    &::before { // circle
+      background-color: white;
+    }
+
+    &::after { // right half of bottom border
+      background: white;
+    }
+  }
+
+  .box {
+    margin-top: 2em;
+    border-color: white;
+
+    &::after { // left half of bottom border
+      background-color: white;
+    }
   }
 
   & h1 {
@@ -38,8 +56,7 @@
   }
 
   & h2 {
-    font-size: 2rem;
-    font-weight: 300;
+    color: white;
   }
 }
 
@@ -49,17 +66,4 @@ img.logo {
   filter: url(#drop-shadow);
   -webkit-filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
   filter: drop-shadow(1px 1px 2px rgba(0, 0, 0, 0.2));
-}
-
-.box {
-  margin: 2em 0 9em;
-  max-width: 60rem;
-  font-size: 1.05rem;
-  line-height: 1.4775;
-  border: 1px solid white;
-  padding: 3em;
-
-  & :last-child {
-    margin-bottom: 0;
-  }
 }
