--- a/css/manifest.scss
+++ b/css/manifest.scss
@@ -2,6 +2,7 @@
 @import 'normalize.css/normalize.css';
 @import 'markdown-styles';
 @import 'Base';
+@import 'Bio';
 @import 'Headroom';
 @import 'Hero';
 @import 'Uberlist';
