--- a/css/manifest.scss
+++ b/css/manifest.scss
@@ -1,5 +1,9 @@
 //@import 'reset-css/reset.css';
 @import 'normalize.css/normalize.css';
+@import "~slick-carousel/slick/slick.scss";
+$slick-font-path: '~slick-carousel/slick/fonts/';
+$slick-loader-path: '~slick-carousel/slick/';
+@import "~slick-carousel/slick/slick-theme.scss";
 @import 'markdown-styles';
 @import 'Base';
 @import 'Bio';
