--- a/css/_Base.scss
+++ b/css/_Base.scss
@@ -125,7 +125,7 @@ main section {
       background-color: var(--kitsuneLightGray);
     }
 
-    & :last-child {
+    & > :last-child {
       margin-bottom: 0;
     }
   }
@@ -229,4 +229,71 @@ main section {
       background-size: 120px;
     }
   }
+
+  .team-carousel {
+    margin: 0 -3em 0;
+    padding: 0 3em;
+    position: relative;
+
+    &::before {
+      content: '';
+      width: 100%;
+      height: 2px;
+      background-color: white;
+      position: absolute;
+      top: 81px; // 162px / 2
+      left: 0;
+    }
+  }
+  /*
+  .slick-dots {
+    display: flex !important; // grrr
+    flex-direction: row;
+    flex-wrap: nowrap;
+    align-items: center;
+    justify-content: center;
+    height: 162px;
+    bottom: auto;
+    top: calc(-7em - (162px / 2) - 1px);
+
+    li {
+      width: 122px;
+      height: 122px;
+      background: none;
+      transition-property: background-color, height, opacity, top, width;
+      transition-duration: 0.6s;
+      background: #f9f9f9;
+      border-radius: 50%;
+
+      &.slick-active {
+        width: 162px;
+        height: 162px;
+        background: white;
+
+        img {
+          opacity: 1;
+        }
+      }
+
+      a {
+        margin: 10px;
+        width: calc(100% - 20px);
+        height: calc(100% - 20px);
+        border-bottom: none;
+      }
+
+      a,
+      img {
+        display: inline-block;
+        border-radius: 50%;
+      }
+
+      img {
+        width: 100%;
+        height: 100%;
+        opacity: 0.75;
+      }
+    }
+  }
+  */
 }
