--- a/css/manifest.scss
+++ b/css/manifest.scss
@@ -7,6 +7,7 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'markdown-styles';
 @import 'Base';
 @import 'Bio';
+@import 'ContactForm';
 @import 'Headroom';
 @import 'Hero';
 @import 'Uberlist';
