--- a/css/manifest.scss
+++ b/css/manifest.scss
@@ -5,8 +5,10 @@ $slick-font-path: '~slick-carousel/slick/fonts/';
 $slick-loader-path: '~slick-carousel/slick/';
 @import "~slick-carousel/slick/slick-theme.scss";
 @import 'markdown-styles';
+@import 'icons';
 @import 'Base';
 @import 'Bio';
+@import 'Button';
 @import 'ContactForm';
 @import 'Headroom';
 @import 'Hero';
