--- a/css/_Button.scss
+++ b/css/_Button.scss
@@ -5,7 +5,7 @@
   color: inherit;
   background: none;
   cursor: pointer;
-  padding: 1.5rem 4rem;
+  padding: 1.5rem 4rem 1.5rem 5rem;
   display: inline-block;
   margin: 1rem 2rem;
   text-transform: uppercase;
@@ -54,8 +54,19 @@
   }
 }
 
-.btn-submit::before {
-  content: "\f120";
+.btn-submit {
+  &::before {
+    content: "\f120";
+  }
+
+  &[disabled] {
+    background: #aaa;
+    color: #f5f5f5;
+
+    &::before {
+      color: #f5f5f5;
+    }
+  }
 }
 
 
@@ -63,7 +74,7 @@
 
 .btn-success,
 .btn-error {
-  color: transparent;
+  color: transparent !important;
 }
 
 .btn-success::after,
@@ -71,6 +82,10 @@
   z-index: 1;
   color: #fff;
   left: 40%;
+}
+
+.btn-success {
+  background: #17aa56 !important;
 }
 
 .btn-success::before {
@@ -95,6 +110,7 @@
 
 .btn-error {
   animation: shake 0.5s;
+  background: #d00 !important;
 }
 
 /* From Dan Eden's animate.css: http://daneden.me/animate/ */
