--- a/css/manifest.scss
+++ b/css/manifest.scss
@@ -7,9 +7,15 @@ $slick-loader-path: '~slick-carousel/slick/';
 @import 'markdown-styles';
 @import 'icons';
 @import 'Base';
+
+// Components
+// @todo Convert to css-modules
+@import 'Alert';
 @import 'Bio';
 @import 'Button';
+@import 'Collapsible';
 @import 'ContactForm';
 @import 'Headroom';
 @import 'Hero';
+@import 'Loader';
 @import 'Uberlist';
