--- a/components/SiteFooter.module.css
+++ b/components/SiteFooter.module.css
@@ -3,7 +3,7 @@
   --color: white;
 }
 
-.site-header {
+.site-footer {
   background: var(--bgColor);
   color: var(--color);
   display: flex;
@@ -15,10 +15,25 @@
   & a {
     color: var(--color);
     text-decoration: none;
+    border-bottom: none;
 
     &:hover {
     }
   }
+
+  & nav {
+    max-width: 45%;
+    flex-grow: 1;
+
+    & ul {
+      justify-content: flex-end;
+    }
+  }
+}
+
+.copyright {
+    max-width: 45%;
+    flex-grow: 1;
 }
 
 .branding {
@@ -27,7 +42,7 @@
   align-items: center;
 
   & img {
-    margin: 0 1em 0 0;
+    margin: 0;
     filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=2, OffY=2, Color='#444')";
     filter: url(#drop-shadow);
     -webkit-filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.5));
