--- a/css/_Base.scss
+++ b/css/_Base.scss
@@ -6,9 +6,13 @@
 
 a {
   color: var(--kitsuneOrange);
-  transition: color 0.6s;
+  transition: color 0.3s;
   text-decoration: none;
   border-bottom: 1px solid var(--kitsuneOrange);
+}
+
+strong {
+  font-weight: bold;
 }
 
 main section {
