--- a/src/components/SiteFooter.module.scss
+++ b/src/components/SiteFooter.module.scss
@@ -3,35 +3,88 @@
   --color: white;
 }
 
-.site-header {
+@custom-media --expanded-nav (min-width: 60em);
+
+.site-footer {
   background: var(--bgColor);
   color: var(--color);
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 1.25em 2.5em;
+  padding: 0.75em 1em;
+
+  @media (--expanded-nav) {
+    padding: 1.25em 2.5em;
+  }
 
   & a {
     color: var(--color);
     text-decoration: none;
+    border-bottom: none;
 
     &:hover {
     }
   }
+
+  & nav {
+    max-width: 45%;
+    flex-grow: 1;
+
+    & ul {
+      display: block;
+      text-align: right;
+
+      @media (--expanded-nav) {
+        display: flex;
+        justify-content: flex-end;
+      }
+
+      & li {
+        font-size: 0.75rem;
+        margin: 0 0 0.5em;
+
+        @media (--expanded-nav) {
+          font-size: 1rem;
+          margin: 0 0 0 4em;
+        }
+      }
+    }
+  }
+}
+
+.copyright {
+  font-size: 0.75rem;
+  max-width: 45%;
+  flex-grow: 1;
+
+  @media (--expanded-nav) {
+    font-size: 1rem;
+  }
 }
 
 .branding {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+  display: none;
+
+  @media (--expanded-nav) {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
 
   & img {
-    margin: 0 1em 0 0;
+    margin: 0;
     filter: "progid:DXImageTransform.Microsoft.Dropshadow(OffX=2, OffY=2, Color='#444')";
     filter: url(#drop-shadow);
     -webkit-filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.5));
     filter: drop-shadow(2px 2px 5px rgba(0, 0, 0, 0.5));
+    width: 38px;
+    height: 36px;
+
+    @media (--expanded-nav) {
+      width: 53px;
+      height: 50px;
+    }
   }
 }
 
