--- a/src/css/_Base.scss
+++ b/src/css/_Base.scss
@@ -9,6 +9,30 @@
 
 body {
   overflow-x: hidden;
+
+  &.has-overlay {
+    //height: 100vh;
+    overflow-y: hidden;
+    touch-action: none;
+  }
+}
+
+.overlay {
+  display: none;
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  overflow: auto;
+}
+
+.has-overlay .overlay {
+  display: block;
 }
 
 .sr-only {
