--- a/src/components/BackToTop.module.scss
+++ b/src/components/BackToTop.module.scss
@@ -15,7 +15,7 @@
   display: block;
   position: fixed;
   z-index: 99;
-  right: -0.25rem;
+  right: 0.25rem;
   bottom: 1rem;
   background: none;
   border: none;
@@ -28,14 +28,14 @@
   transform: translateY(0);
 
   @media (--expanded-nav) {
-    right: 2.5rem;
+    //right: 2.5rem;
   }
 
   span {
     display: none;
 
     @media (--expanded-nav) {
-      display: inline;
+      //display: inline;
     }
   }
 
