--- a/src/css/_Base.scss
+++ b/src/css/_Base.scss
@@ -378,14 +378,16 @@ main section {
     padding: 0 3em;
     position: relative;
 
-    &::before {
-      content: '';
-      width: 100%;
-      height: 2px;
-      background-color: white;
-      position: absolute;
-      top: 81px; // 162px / 2
-      left: 0;
+    @media only screen and (min-width: 60em) {
+      &::before {
+        content: '';
+        width: 100%;
+        height: 2px;
+        background-color: white;
+        position: absolute;
+        top: 81px; // 162px / 2
+        left: 0;
+      }
     }
   }
 }
